# tracker-control-android

./: .gitignore  ADBLOCKING.md  AGENTS.md  CITATION.cff  CLAUDE.md  CNAME  Doxyfile  FDROID-UPDATE.md  OPEN_ISSUES_TRIAGE.md  README.md  SECURITY.md  TODO.md  _codeql_detected_source_root  _config.yml  build.gradle  crowdin.yml  gradle.properties  paper.bib  paper.md  rust-toolchain.toml  settings.gradle  strings.xml
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/gradle/: ccache-launcher.sh  wgbridge.gradle
app/libs/: .gitkeep  antmonitorlib.aar
app/src/debug/res/values/: strings.xml
app/src/fdroid/: AndroidManifest.xml
app/src/fdroid/res/values/: meta_data.xml
app/src/github/: AndroidManifest.xml
app/src/github/res/values/: meta_data.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: companyDomains.json  ddg-data-types.csv  ddg-excluded-apps.json  disconnect-blacklist.json  disconnect-blacklist.reversed.json  duckduckgo-android-tds.json  hosts.txt  ip_blocklist.txt  xray-blacklist.json
app/src/main/jni/netguard/: dhcp.c  ip.c  netguard.c  netguard.h  session.c  tcp.c  tls.c  tls.h  udp.c
app/src/main/res/animator/: transmission_selection.xml
app/src/main/res/color/: btn_analyze_text_color.xml  switch_rocket_color.xml  switch_rocket_thumb_color.xml  switch_rocket_thumb_icon_color.xml  switch_rocket_track_color.xml  transmissions_card_color.xml
app/src/main/res/drawable/: bg_insights_hero.xml  bg_progress_blocked.xml  bg_progress_track.xml  bg_rounded_white_alpha.xml  bg_stat_card_allowed.xml  bg_stat_card_blocked.xml  bg_stat_card_neutral.xml  divider_top_white_alpha.xml  host_allowed.xml  host_blocked.xml  ic_advertising.xml  ic_apps.xml  ic_domain.xml  ic_email.xml  ic_expand.xml  ic_expand_less.xml  ic_expand_more.xml  ic_history.xml  ic_ios_share.xml  ic_launcher_foreground.xml  ic_megaphone.xml  ic_open_in_browser.xml  ic_rocket2.xml  ic_scan_code.xml  ic_shield_check.xml  ic_shield_off.xml  ic_warning_amber.xml  lockdown.xml  lockdown_disabled.xml  lockdown_off.xml  lockdown_on.xml  other.xml  other_off.xml  other_off_disabled.xml  other_on.xml  other_on_disabled.xml  screen.xml  screen_on.xml  screen_on_disabled.xml  switch_rocket.xml  (+6 more)
app/src/main/res/layout/: about.xml  access.xml  actionlog.xml  actionmain.xml  activity_blocklists.xml  activity_details.xml  activity_diagnostics.xml  activity_insights.xml  activity_main.xml  activity_onboarding.xml  activity_settings.xml  activity_timeline.xml  activity_wg_profiles.xml  activity_whitelist.xml  android.xml  content_main.xml  datasaving.xml  disclaimer.xml  dns.xml  doze.xml  enable.xml  filter.xml  forward.xml  forwardadd.xml  forwardapproval.xml  forwarding.xml  fragment_actions.xml  fragment_apps.xml  fragment_countries.xml  fragment_info.xml  fragment_policy.xml  fragment_timeline.xml  fragment_trackers.xml  fragment_transmissions.xml  fragment_vpn.xml  item_blocklist.xml  item_insights_header.xml  item_onboarding.xml  item_onboarding_blocking_mode.xml  item_timeline_empty.xml  (+35 more)
app/src/play/: AndroidManifest.xml
app/src/test/resources/: robolectric.properties
wgbridge-rs/: Cargo.toml  README.md
wgbridge-rs/src/: callbacks.rs  config.rs  dns.rs  jni_bindings.rs  keys.rs  lib.rs  tunnel.rs
wgbridge-rs/src/transport/: ip_recv.rs  ip_send.rs  mod.rs  udp.rs
(+707 files in other folders)
